# smrforge

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .smrforge_runs.json  ADVANCED_VISUALIZATION_REQUIREMENTS.md  API_IMPROVEMENTS_PROPOSAL.md  API_IMPROVEMENTS_SUMMARY.md  BULK_ENDF_STORAGE.md  BURNUP_SOLVER_IMPLEMENTATION.md  CHANGELOG.md  CODEBASE_CONSISTENCY_REVIEW.md  CODE_QUALITY_COMPLETE.md  CODE_QUALITY_IMPROVEMENTS.md  CODE_REVIEW_REPORT.md  CODE_STYLE.md  CONTRIBUTING.md  CONVENIENCE_METHODS_SUMMARY.md  CORE_NEUTRONICS_ADDED.md  COUPLING_REDUCTION.md  COVERAGE_100_PLAN.md  COVERAGE_COMPLETION_SUMMARY.md  COVERAGE_CONSOLIDATION_SUMMARY.md  COVERAGE_EXCLUSIONS.md  COVERAGE_IMPROVEMENTS_IMPLEMENTED.md  COVERAGE_IMPROVEMENT_SUMMARY.md  COVERAGE_INVENTORY.md  COVERAGE_RUN_INSTRUCTIONS.md  COVERAGE_STATUS_AS_OF_2026_01_20.md  COVERAGE_SURVEY_REPORT.md  COVERAGE_TRACKING.md  CUSTOM_ENDF_PARSER.md  DEVELOPMENT_ROADMAP.md  DOCKER.md  DOCKER_ENDF_QUICKSTART.md  DOCKER_TROUBLESHOOTING.md  DOCKER_USAGE.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  (+114 more)
.github/: dependabot.yml  workflows-config.json
_tmp_bench/: BENCHMARK_SUMMARY.md  benchmark_results.json
_tmp_cfd/: heatSource_meta.json
benchmarks/: community_benchmarks.json  validation_benchmarks.json
coverage/: README.md
docs/: AI_FEATURES.md  API_STABILITY.md  DOCUMENTATION_INDEX.md  FAQ.md  FLUX_WEIGHTING_LIMITATION.md  GENERATE_API_DOCS.md  Makefile  PLUGIN_ARCHITECTURE.md  README.md  README_READTHEDOCS_QUICKSTART.md  VERSION_LOCK_REQUIREMENTS.md  api_reference.rst  community_index.rst  community_vs_pro.md  conf.py  contributing.rst  examples.rst  examples_tier_index.rst  generate_api_docs.bat  generate_api_docs.sh  index.rst  installation.rst  pro-tier-overview.md  quickstart.rst  requirements.txt  schema_generation_docs.py
examples/: advanced_features_examples.py  api_ml_export_example.py  assembly_refueling_example.py  basic_neutronics.py  burnup_example.py  community_benchmark_example.py  complete_integration_example.py  complete_smr_workflow_example.py  comprehensive_examples.py  control_rods_example.py  convenience_methods_example.py  converters_workflow_example.py  custom_reactor.py  dashboard_example.py  data_downloader_example.py  decay_heat_example.py  discovery_help_example.py  gamma_source_integration_example.py  gamma_transport_example.py  geometry_import_example.py  help_system_example.py  integrated_safety_uq.py  lwr_smr_example.py  mesh_3d_example.py  openmc_export_example.py  openmc_visualization_examples.py  pinn_mvp_synthetic_data.py  preset_designs.py  quick_start_community.py  serpent_run_example.py  thermal_analysis.py  thermal_scattering_example.py  tsl_file_discovery_example.py  visualization_3d_example.py  visualization_examples.py
results/: batch_results.json  reactor1_results.json  reactor2_results.json
safety/: transients.py
scripts/: add_benchmark_from_sources.py  add_benchmark_values.py  analyze_coverage.py  bundle_nuclear_data.sh  bundle_offline_wheels.ps1  bundle_offline_wheels.sh  check_airgap_pro_parity.py  check_api_stability.py  check_no_pro_airgap.py  coverage_full.ps1  coverage_full.sh  coverage_quick.ps1  coverage_quick.sh  coverage_tracker.ps1  coverage_tracker.sh  extract_cli_modules.py  gen_main_py.py  generate_doc_screenshots.py  generate_preprocessed_library.py  generate_requirements_lock.py  generate_validation_report.py  git_safe.ps1  github_workflow_check.py  lint_quick.py  load_benchmark_references.py  pre_sync_check.py  profile_performance.py  publish_pypi.ps1  publish_pypi.sh  pull_community.ps1  pull_community.sh  push_pro.ps1  push_pro.sh  push_to_github.ps1  push_to_github.sh  reorganize_docs.py  run_performance_profile.ps1  run_performance_profile.sh  run_validation.py  run_vv_benchmarks.py  (+14 more)
security_reports/: security_audit_20260118_155624.txt  security_audit_20260118_155644.txt
smrforge/: __init__.py  __version__.py  _import_compat.py  cli.py  convenience.py  convenience_utils.py  data_downloader.py  help.py
smrforge_pro/: CHANGELOG_PRO.md  README.md  __init__.py  api.py  cli.py  pyproject.toml
smrforge_pro/ai/: __init__.py  audit.py  deep_surrogates.py  multi_fidelity.py  neural_operators.py  nl_design.py  physics_informed.py  pinn.py  surrogate_uq.py  surrogates.py  validation_report.py
smrforge_pro/benchmarks/: __init__.py  runner.py
smrforge_pro/converters/: __init__.py  mcnp.py  openmc.py  serpent.py
smrforge_pro/digital_twin/: __init__.py  twin.py
smrforge_pro/edge/: __init__.py  export.py
smrforge_pro/generative/: __init__.py  conversational_safety.py  copilot.py  document_understanding.py
smrforge_pro/integration/: __init__.py  community_capabilities.py
smrforge_pro/licensing/: __init__.py  generate_license_key.py  validator.py
smrforge_pro/predictive_maintenance/: __init__.py  degradation.py
smrforge_pro/reporting/: __init__.py  generator.py  regulatory.py
smrforge_pro/visualization/: __init__.py  openmc_tally_viz.py  tally.py
smrforge_pro/workflows/: __init__.py  benchmark_reproduction.py  code_verification.py  ml_export.py  multi_objective_optimization.py  plugin_registry.py  regulatory_package.py  surrogate.py  surrogate_validation.py  transients.py
test_openmc/: geometry.xml  materials.xml  settings.xml
testing/: 01_CLI_Commands.ipynb  04_Parameter_Sweep.ipynb  FINAL_TEST_RESULTS.md  MANUAL_TEST_RESULTS_SUMMARY.md  README.md  RERUN_TEST_RESULTS.md  START_MANUAL_TESTING.md  TEST_DATA_CREATED.md  TEST_RESULTS_TEMPLATE.md  generate_test_data.py  test_01_cli_commands.py  test_02_reactor_creation.py  test_03_burnup.py  test_04_parameter_sweep.py  test_05_templates.py  test_06_constraints.py  test_07_io_converters.py  test_08_data_management.py  test_09_validation.py  (+4 more)
(+1045 files in other folders)
