[build-system]
requires = ["setuptools>=61", "wheel", "numpy>=1.20.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smrforge"
version = "0.1.0"
description = "Small Modular Reactor Design and Analysis Toolkit"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.25.0",
    "httpx>=0.24.0",
    "tqdm>=4.65.0",
    "pint>=0.20.0",
    "pandas>=1.3.0",
    "h5py>=3.0.0",
    "scikit-learn>=1.0.0",
    "numba>=0.56.0",
    "zarr>=2.14.0",
    "polars>=0.19.0",
    "rich>=13.0.0",
    "plotly>=5.0",
    "pyvista>=0.40.0",
    "dash>=2.0",
    "dash-bootstrap-components>=1.0.0",
    "SALib>=1.4.0",
    "seaborn>=0.12.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | __pycache__
  | smrforge\.egg-info
  | backup_.*
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_glob = ["backup_*", "*.egg-info"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "numba.*",
    "scipy.*",
    "matplotlib.*",
    "polars.*",
    "zarr.*",
    "rich.*",
]
ignore_missing_imports = true

