[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smrforge-pro"
version = "0.1.0"
description = "SMRForge Pro - AI/surrogate, BYOS, Serpent/OpenMC converters, validation reports, ML export"
requires-python = ">=3.8"
dependencies = [
    "smrforge",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ai = ["onnxruntime>=1.12", "torch>=1.13"]
reporting = ["reportlab>=4.0"]
ml = ["pyarrow>=10.0", "tables>=3.8"]
openmc = ["openmc>=0.13.0"]
all = ["onnxruntime>=1.12", "torch>=1.13", "reportlab>=4.0", "pyarrow>=10.0", "tables>=3.8", "openmc>=0.13.0"]

[tool.setuptools.packages.find]
where = [".."]
include = ["smrforge_pro*"]
